# k8s-rl-gym

./: .gitignore  README.md  pyproject.toml
configs/: env.local.yaml
k8s/: deployment-worker.yaml  deployment.yaml  service.yaml
scripts/: check_k8s_connection.py  deploy_test_app.sh  run_random_agent.py
src/k8s_rl_gym/: __init__.py  config.py  env.py  k8s_client.py  rewards.py
tests/: test_config.py  test_reward.py
