[project]
name = "k8s-rl-gym"
version = "0.1.0"
description = "A proof-of-concept Gymnasium environment for Kubernetes Deployment autoscaling."
authors = [
    {name = "Flo Fuerst",email = "flo.fuerst@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
    "kubernetes>=30.0.0,<35.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[tool.poetry]
packages = [{include = "k8s_rl_gym", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
